--- a/templates/board_form.html
+++ b/templates/board_form.html
@@ -9,7 +9,7 @@
 {% include 'header.html' %}
 <body>
     <section>
-        <h2>게시판</h2>
+        <h2>게시글 등록</h2>
         <form method="POST" action="api/v1/boards/" enctype="multipart/form-data">
             <input type="text" id="title" name="title" placeholder="title" autofocus>
             <textarea id="contents" name="contents"></textarea>
