--- a/templates/join_form.html
+++ b/templates/join_form.html
@@ -6,21 +6,22 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="{% static 'style/form.css' %}">
+    <script src="{% static 'script/csrf.js' %}"></script>
 </head>
 {% include 'header.html' %}
 
 <body>
     <section>
         <h2>회원가입</h2>
-        <form method="POST" action="/api/v1/users/">
-            {% csrf_token %}
+        <form>
             <input type="text" id="username" name="username" placeholder="username">
             <input type="text" id="name" name="name" placeholder="name">
             <input type="eamil" id="email" name="email" placeholder="email">
             <input type="password" id="password" name="password" placeholder="password">
-            <input type="submit" value="회원가입">
+            <input type="button" value="회원가입" onclick="join()">
         </form>
     </section>
+    <script src="{% static 'script/user-api.js' %}"></script>
 </body>
 {% include 'footer.html' %}
 
