Update Boards.post() set author

--- a/templates/board_form.html
+++ b/templates/board_form.html
@@ -10,7 +10,8 @@
 <body>
     <section>
         <h2>게시글 등록</h2>
-        <form method="POST" action="api/v1/boards/" enctype="multipart/form-data">
+        <form method="POST" action="/api/v1/boards/" enctype="multipart/form-data">
+            {% csrf_token %}
             <input type="text" id="title" name="title" placeholder="title" autofocus>
             <textarea id="contents" name="contents"></textarea>
             <input type="file" id="file" name="loaded_file" accept="image/png, image/jpg, image/jpeg, image.gif">
