Fix UserDetail.put() set_password

--- a/static/style/form.css
+++ b/static/style/form.css
@@ -28,6 +28,13 @@ textarea {
     height: 20vh;
 }
 
-input[type='button'] {
+input[type='button'], 
+input[type='submit']
+{
     cursor: pointer;
+}
+
+img {
+    width: 80%;
+    margin: auto;
 }
