--- a/templates/board_form.html
+++ b/templates/board_form.html
@@ -1,12 +1,13 @@
 {% load static %}
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="{% static 'style/form.css' %}"
-</head>
-{% include 'header.html' %}
+    <link rel="stylesheet" href="{% static 'style/form.css' %}" </head>
+    {% include 'header.html' %}
+
 <body>
     <section>
         <h2>게시글 등록</h2>
@@ -20,4 +21,5 @@
     </section>
 </body>
 {% include 'footer.html' %}
+
 </html>
